--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,6 +22,10 @@
   <%= @post.longitude %>
 </p>
 
+<p>
+  <%= pluralize(@likes.size, 'like') %> 
+</p>
+
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
