--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>Like</th>
       <th>Content</th>
       <th>User</th>
       <th colspan="3"></th>
@@ -12,12 +13,16 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <% if user_signed_in? %>
+          <td> <%= button_to "^", post_likes_path(post) %> </td>
+        <% end %>
         <td><%= post.content %></td>
         <td><%= post.user.email if post.user %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+
     <% end %>
   </tbody>
 </table>
