--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,11 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
- *
+ *= require bootstrap.css
+ *= require flat-ui.css
+ *= require icon-font.css
+ *= require animations.css
+ *= require post_style.css
  *= require_tree .
  *= require_self
  */
