--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,32 +1,25 @@
-<h1>Listing posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Like</th>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container">  
+  <table class="table table-striped">
     <% @posts.each do |post| %>
-      <tr>
-        <% if user_signed_in? %>
-          <td> <%= button_to "^", post_likes_path(post) %> </td>
-        <% end %>
-        <td><%= post.content %></td>
-        <td><%= post.user.email if post.user %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      
+        <div class = "container">
+          <tr>
+            <td><%= post.likes.count %></td>
+            <% if user_signed_in? %>
+              <td> <%= button_to "Like", post_likes_path(post) %> </td>
+            <% end %>
+            <td><%= post.content %></td>
+            <td><%= post.user.email if post.user %></td>
+            <td><%= link_to 'Show', post %></td>
+            <td><%= link_to 'Edit', edit_post_path(post) %></td>
+            <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        </div>
+      
 
     <% end %>
-  </tbody>
-</table>
-
+  </table>
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+</div>
