--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 <% if user_signed_in? %>
   Logged in as <strong><%= current_user.email %></strong>.
   <%= current_user.current_sign_in_ip%>
+   <%= current_user.latitude%>
+    <%= current_user.longitude%>
   <%= link_to 'Edit profile', edit_user_registration_path %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 <% else %>
